--- a/colorPicker.html
+++ b/colorPicker.html
@@ -23,7 +23,7 @@
             color:teal;
         }
         .purple{
-            color:puple;
+            color:purple;
         }
         .yellow{
             color:yellow;
@@ -113,7 +113,6 @@
         content.classList.remove('teal');
         content.classList.remove('purple');
     }
-    hi
 </script>
 </body>
 </html>
