--- a/colorPicker2.html
+++ b/colorPicker2.html
@@ -40,9 +40,9 @@
 
     clear.addEventListener('click', function(e){
         content.style.backgroundColor= 'white';
-        bg.value='#FFFFFF'
+        bg.value='#FFFFFF';
         content.style.color = ' black';
-        txt.value = '#000000'
+        txt.value = '#000000';
     });
 
 </script>
