--- a/TextandStyle.html
+++ b/TextandStyle.html
@@ -64,11 +64,11 @@
         }
 
         if(checkIsTri(sideA, sideB, sideC)){
-            ans.textContent = 'Yes, this makes a valid triangle'
+            ans.textContent = 'Yes, this makes a valid triangle';
             return;
         }
         ans.textContent = "Inputs do NOT create a valid triangle"
-    })
+    });
 
     function checkIsValid(num){
         if (isNaN(num)){
