--- a/pizzzeria.html
+++ b/pizzzeria.html
@@ -11,7 +11,7 @@
         <h1>Airezzip</h1>
         <form>
             <fieldset>
-                <legend>Customer:</legend></legend>
+                <legend>Customer:</legend>
                 <div class="row">
                     <div>
                         <label for="firstname">First</label>
@@ -27,9 +27,9 @@
     </div>
 </div>
 
-<div classw="row">
+<div class="row">
     <fieldset>
-        <legend>Flavor:</legend></legend>
+        <legend>Flavor:</legend>
         <div>
             <input type="radio" id="pepperoni" name="pizza">
             <label for="pepperoni">Pepperoni</label>
@@ -51,7 +51,7 @@
 
 <div>
     <fieldset>
-        <legend>Size:</legend></legend>
+        <legend>Size:</legend>
         <div>
             <input type="radio" id="small" name="size">
             <label for="small">Small</label>
@@ -69,7 +69,7 @@
 
 <div>
     <fieldset>
-        <legend>Topping:</legend></legend>
+        <legend>Topping:</legend>
         <div>
             <input type="checkbox" id="sprinkles" name="sprinkles">
             <label for="sprinkles">Sprinkles</label>
@@ -87,7 +87,7 @@
 
 <div>
     <fieldset>
-        <legend>Cup or Cone:</legend></legend>
+        <legend>Cup or Cone:</legend>
         <label for="container">Please Choose One</label>
         <select name="container" id="container">
             <option value="cup">Plastic Cup</option>
@@ -98,7 +98,7 @@
     </fieldset>
 </div>
 <fieldset>
-    <legend>Special:</legend></legend>
+    <legend>Special:</legend>
     <div>
         <label for="SpecialRequests">Special Requests:</label>
         <textarea id="SpecialRequests" name="SpecialRequests" row="4" cols="10" placeholder="Allergic to peanut, substitution, etc."></textarea>
